# aem-admin-pyclient

./: .env.example  .flake8  .gitignore  DEVELOPMENT.md  LICENSE  README.md  aem-admin-api-spec.json  cli.py  create_config.py  pyproject.toml  requirements.txt  setup-venv.sh  setup.py
docs/: API_REFERENCE.md
examples/: basic_usage.py
scripts/: format.sh  lint.sh
src/aem_admin_client/: __init__.py  base.py  client.py  config.py  exceptions.py  models.py
src/aem_admin_client/operations/: __init__.py  cache.py  code.py  config.py  index.py  job.py  log.py  preview.py  publish.py  snapshot.py  status.py
tests/: test_client.py
