[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aem-admin-client"
dynamic = ["version"]
description = "A comprehensive Python client library for the AEM Admin API"
readme = "README.md"
authors = [
    {name = "AEM Admin Python Client Contributors", email = "admin@example.com"}
]
license = "Apache-2.0"
requires-python = ">=3.8"
keywords = ["aem", "admin", "api", "client", "adobe", "experience", "manager", "helix"]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "urllib3>=2.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=23.0",
    "flake8>=6.0",
    "flake8-docstrings>=1.7",
    "flake8-bugbear>=23.0",
    "flake8-comprehensions>=3.14",
    "flake8-simplify>=0.21",
    "isort>=5.12",
    "mypy>=1.0",
    "types-requests>=2.31",
    "types-python-dateutil>=2.8",
]

[project.urls]
Homepage = "https://github.com/adobe-rnd/aem-admin-pyclient"
Documentation = "https://github.com/adobe-rnd/aem-admin-pyclient/blob/main/docs/API_REFERENCE.md"
Repository = "https://github.com/adobe-rnd/aem-admin-pyclient"
Issues = "https://github.com/adobe-rnd/aem-admin-pyclient/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "aem_admin_client.__version__"}

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["docs"]

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true